update: 說明文件
