# src/routers/postRouter.ts
@@ -1,11 +1,9 @@
 import express, { Router } from "express";
 import { PostController } from "../controllers/postContorller";
-import { addTag } from "../middlewares/addTag";
 
 const PostRouter: Router = express.Router();
 
 PostRouter.route("/posts")
-  .all(addTag("Posts", "/posts"))
   .get(PostController.getPosts)
   .post(PostController.createPost)
   .delete(PostController.deleteAllPosts);
